--- a/job_portal/package.json
+++ b/job_portal/package.json
@@ -31,6 +31,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.0",
+    "react-spinners": "^0.17.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.3",
     "tailwindcss-animate": "^1.0.7",
